--- a/app/globals.css
+++ b/app/globals.css
@@ -26,14 +26,14 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-a {
+a, button {
   box-shadow: inset 0 0 0 0 #54b3d6;
   border-radius: .25rem;
   transition: all 500ms;
   padding: 5px;
 }
 
-a:hover {
+a:hover, button:hover {
   color: white;
   box-shadow: inset  0 0 150px 0 #54b3d6;
 }
